# ffrdma

./: .gitignore  CMakeLists.txt  compile_env.sh  decoder.cpp  main.cpp  rank0.sh  rank1.sh  rank2.sh  rank3.sh  readme.md
include/: comm.hpp  fmpi.hpp  mpi.hpp  process.hpp
include/process/: process.hpp
include/rsocket/: rdma_socket.h
include/utils/: arg_parser.hpp  debug.hpp  decoder.hpp  log.hpp  rank_alg.hpp  socket.hpp  strings.hpp  thlib.hpp  types.hpp
rsocket/: CMakeLists.txt  compile.sh
rsocket/include/: rdma_socket.h
rsocket/src/: amessage.cpp  poll_wc.cpp  rdma_socket.cpp
rsocket/test/: socket_client.cpp
src/: amessage.cpp  fmpi.cc  init.cpp  mpi.cc  mpi.cpp  poll_wc.cpp  post_wr.cpp  process.cc  queue.cpp  rdma_socket.cpp  receiver.cpp
src/utils/: socket.cc
test/: .hello_world.cc.swn  .hello_world.cc.swo  .test_allgatv_exp.cc.swo  CMakeLists.txt  hello_world.cc  test_allgat.cc  test_allgat_exp.cc  test_allgatv_exp.cc  test_bcast.cc  test_gat.cc  test_scat.cc
test/comm/: hello_4.cc
test/process/: hello_2.cc  hello_3.cc  hello_4.cc  test_wtime.cc
test/utils/: arg_parser.cc
tools/ffrun/: go.mod  go.sum  main.go
tools/ffrun/cmd/: cmd.go  generate.go  root.go  run.go
tools/ffrun/pkg/algorithm/: port_select.go  rank_alg.go
tools/ffrun/pkg/executors/: executors.go  pool.go  process.go
tools/ffrun/pkg/generator/: command.go  io.go
tools/ffrun/pkg/parser/: parser.go  singularity.go  singularity_test.go
tools/ffrun/pkg/remote/: ssh.go
tools/ffrun/pkg/types/: types.go  types_test.go
tools/ffrun/pkg/utils/: cast.go  dir.go  net.go  routines.go  sys.go  writer.go
